cabal-version:      2.4
name:               loop-dsl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Control.Monad.Loop
        Control.Monad.Loop.Internal
        Control.Monad.Loop.Class

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
       base ^>=4.14.1.0
     , transformers
     , mtl

    hs-source-dirs: src
    default-language: Haskell2010


test-suite test
    type:       exitcode-stdio-1.0
    main-is:    tests/Main.hs

    default-language: Haskell2010
    build-depends:
       base >= 4 && < 5
     , loop-dsl
     , hspec
     , transformers
     , mtl
     , async
